switch to a patch; nearly works

--- a/ImagePhaseSandbox.ipynb
+++ b/ImagePhaseSandbox.ipynb
@@ -45,15 +45,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# read in the two images\n",
     "rgbs = []\n",
     "for filename in ['frame0.jpg', 'frame30.jpg']:\n",
     "    im = pil.open(filename)\n",
     "    rgb = np.array(im).astype(np.float64)\n",
-    "    rgbs.append(rgb)"
+    "    rgbs.append(rgb)\n",
+    "rgbs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# take a tiny subsection for testing locality of this. Or not!\n",
+    "rgbs = [rgb[900:1028,1200:1328] for rgb in rgbs]\n",
+    "rgbs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# show me the images\n",
+    "for rgb in rgbs:\n",
+    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "    ax.imshow(rgb[..., 0], cmap='Greys')\n",
+    "    ax.set_aspect('equal')"
    ]
   },
   {
@@ -64,20 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "# for rgb in rgbs:\n",
-    "#     fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "#     ax.imshow(rgb[..., 0], cmap='Greys')\n",
-    "#     ax.set_aspect('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "# get the FFTs\n",
     "all_ffts = []\n",
     "for rgb in rgbs:\n",
     "    for band in range(3):\n",
@@ -182,7 +199,8 @@
     "times = np.arange(-1., 2.001, 0.25)\n",
     "Rims = get_ims_at_new_times(all_ffts[0], all_ffts[3], times, write=True)\n",
     "# Gims = get_ims_at_new_times(all_ffts[1], all_ffts[4], times)\n",
-    "# Bims = get_ims_at_new_times(all_ffts[2], all_ffts[5], times)"
+    "# Bims = get_ims_at_new_times(all_ffts[2], all_ffts[5], times)\n",
+    "len(Rims)"
    ]
   },
   {
@@ -195,205 +213,8 @@
    "source": [
     "Rims_s = get_ims_at_new_times_stupidly(all_ffts[0], all_ffts[3], times, write=True)\n",
     "# Gims_s = get_ims_at_new_times_stupidly(all_ffts[1], all_ffts[4], times)\n",
-    "# Bims_s = get_ims_at_new_times_stupidly(all_ffts[2], all_ffts[5], times)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "len(Rims)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(ims[40], cmap='Greys')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_ims(data1, data2, nslice, save_dont_return=False):\n",
-    "    f1 = np.stack((data1.real, data1.imag), axis=0)\n",
-    "    f2 = np.stack((data2.real, data2.imag), axis=0)\n",
-    "    \n",
-    "    amp1 = np.abs(data1)\n",
-    "    amp2 = np.abs(data2)\n",
-    "    \n",
-    "    uf1 = f1 / amp1[None]\n",
-    "    uf2 = f2 / amp2[None]\n",
-    "\n",
-    "    cross = np.cross(uf1, uf2, axis=0)\n",
-    "    theta2 = np.arcsin(cross)\n",
-    "    thetas = [np.linspace(0, theta2, nslice)[1] - 0.\n",
-    "    dtheta = thetas[1] - thetas[0]\n",
-    "    \n",
-    "    frames = np.concatenate((np.arange(-4*nslice, 0), \n",
-    "                             np.arange(0, nslice),\n",
-    "                             np.arange(nslice, nslice + 4*nslice)))\n",
-    "    \n",
-    "    ims = [] \n",
-    "    for j, i in enumerate(frames):\n",
-    "        theta = dtheta * i\n",
-    "        if i < 0:\n",
-    "            fac = amp1\n",
-    "        elif i > nslice:\n",
-    "            fac = amp2\n",
-    "        else:\n",
-    "            fac = (amp2 - amp1) / nslice * i + amp1\n",
-    "        \n",
-    "        R = np.array([[np.cos(theta), np.sin(theta)],\n",
-    "                      [-np.sin(theta), np.cos(theta)]])\n",
-    "        rot_f1 = np.einsum('ijnm,inm->jnm', R, uf1)\n",
-    "            \n",
-    "        rot_f1 *= fac\n",
-    "        rot_f1 = rot_f1[0] + 1j*rot_f1[1]\n",
-    "        rot_f1 = ifft(rot_f1).real\n",
-    "        \n",
-    "        if save_dont_return:\n",
-    "            fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "            ax.imshow(rot_f1.real, cmap='Greys')\n",
-    "            ax.set_aspect('equal')\n",
-    "            ax.xaxis.set_visible(False)\n",
-    "            ax.yaxis.set_visible(False)\n",
-    "            fig.tight_layout()\n",
-    "            fig.savefig(FILEPATH + '/scratch/supernova-phase-bump/sn_frame_{j:03d}.png', \n",
-    "                        dpi=150)\n",
-    "            plt.close(fig)\n",
-    "            \n",
-    "        else:\n",
-    "            ims.append(rot_f1)\n",
-    "    \n",
-    "    if not save_dont_return:\n",
-    "        return np.array(ims)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import glob, os\n",
-    "for filename in glob.glob(FILEPATH + '/scratch/supernova-phase-bump/*'):\n",
-    "    num = int(filename.split('.')[0].split('_')[-1])\n",
-    "    new_filename = FILEPATH + '/scratch/supernova-phase-bump/sn_frame_{:03d}.png'.format(num)\n",
-    "    os.system('mv {} {}'.format(filename, new_filename))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "nslice = 16\n",
-    "ims = get_ims(all_ffts[0], all_ffts[3], nslice, save_dont_return=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# for im in [ims[0], ims[nslice], ims[nslice+nslice], ims[-1]]:\n",
-    "#     fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "#     ax.imshow(im.real, cmap='Greys')\n",
-    "#     ax.set_aspect('equal')\n",
-    "#     ax.xaxis.set_visible(False)\n",
-    "#     ax.yaxis.set_visible(False)\n",
-    "#     fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# max_theta = np.arcsin(cross[2])\n",
-    "\n",
-    "R = np.array([[np.cos(theta), -np.sin(theta)],\n",
-    "                  [np.sin(theta), np.cos(theta)]])\n",
-    "R.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(ifft(amp1 * np.exp(1j * phase2)).real - rgbs[0][..., 0], cmap='Greys')\n",
-    "# plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(ifft(amp2 * np.exp(1j * phase1)).real, cmap='Greys')"
+    "# Bims_s = get_ims_at_new_times_stupidly(all_ffts[2], all_ffts[5], times)\n",
+    "len(Rims_s)"
    ]
   },
   {
@@ -430,20 +251,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "fft(x, n=None, axis=-1, overwrite_x=0)¶\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "(x, shape=None, axes=(-2, -1), overwrite_x=False)[source]¶"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
