moving stuff around

--- a/ipynb/ImagePhaseSandbox.ipynb
+++ b/ipynb/ImagePhaseSandbox.ipynb
@@ -15,6 +15,7 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "\n",
+    "# THIS IS A HACK! How do I do this properly?\n",
     "FILEPATH = \"/Users/dhogg/ImagePhaseSandbox/ipynb\"\n",
     "\n",
     "# from scipy.fftpack import rfft as fft, irfft as ifft\n",
