small changes to get gifs for adrn

--- a/ipynb/ImagePhaseSandbox.ipynb
+++ b/ipynb/ImagePhaseSandbox.ipynb
@@ -15,9 +15,6 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "\n",
-    "# THIS IS A HACK! How do I do this properly?\n",
-    "FILEPATH = \"/Users/dhogg/ImagePhaseSandbox/ipynb\"\n",
-    "\n",
     "# from scipy.fftpack import rfft as fft, irfft as ifft\n",
     "from scipy.fftpack import fft2 as fft, ifft2 as ifft\n",
     "from PIL import Image as pil"
@@ -131,7 +128,7 @@
     "            ax.xaxis.set_visible(False)\n",
     "            ax.yaxis.set_visible(False)\n",
     "            fig.tight_layout()\n",
-    "            fig.savefig(FILEPATH + '/scratch/sn_frame_stupid{:03d}.png'.format(j), \n",
+    "            fig.savefig('scratch/sn_frame_stupid{:03d}.png'.format(j), \n",
     "                        dpi=150)\n",
     "            plt.close(fig)\n",
     "    return ims"
@@ -182,7 +179,7 @@
     "            ax.xaxis.set_visible(False)\n",
     "            ax.yaxis.set_visible(False)\n",
     "            fig.tight_layout()\n",
-    "            fig.savefig(FILEPATH + '/scratch/sn_frame{:03d}.png'.format(j), \n",
+    "            fig.savefig('scratch/sn_frame{:03d}.png'.format(j), \n",
     "                        dpi=150)\n",
     "            plt.close(fig)\n",
     "    \n",
@@ -197,7 +194,7 @@
    },
    "outputs": [],
    "source": [
-    "times = np.arange(-1., 2.001, 0.25)\n",
+    "times = np.arange(-2., 3.001, 0.25)\n",
     "Rims = get_ims_at_new_times(all_ffts[0], all_ffts[3], times, write=True)\n",
     "# Gims = get_ims_at_new_times(all_ffts[1], all_ffts[4], times)\n",
     "# Bims = get_ims_at_new_times(all_ffts[2], all_ffts[5], times)\n",
@@ -217,42 +214,6 @@
     "# Bims_s = get_ims_at_new_times_stupidly(all_ffts[2], all_ffts[5], times)\n",
     "len(Rims_s)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
